[package]
name = "chemcore"
version = "0.2.1"
authors = ["The ChemCore Project Developers"]
license = "MIT"
edition = "2018"
readme = "README.md"
repository = "https://github.com/rapodaca/chemcore"
description = """
A cheminformatics toolkit.
"""

[dependencies]
# gamma = "0.6"
gamma = { path = "../gamma" }
purr = "0.6"
