[package]
name = "chemcore"
version = "0.3.0"
authors = ["The ChemCore Project Developers"]
license = "MIT"
edition = "2018"
readme = "README.md"
repository = "https://github.com/rapodaca/chemcore"
description = """
A cheminformatics toolkit.
"""

[dependencies]
gamma = "0.8.1"
purr = "0.6.3"

[dev-dependencies]
pretty_assertions = "0.6.1"