[package]
name = "chemcore"
version = "0.4.0"
authors = ["The ChemCore Project Developers"]
license = "MIT"
edition = "2018"
readme = "README.md"
repository = "https://github.com/rapodaca/chemcore"
description = """
A cheminformatics toolkit.
"""

[dependencies]
gamma = "0.9.0"
purr =  "0.7.0"

[dev-dependencies]
pretty_assertions = "0.6.1"